Print Bill List in PDF Done and Navigation Bar Fixed at top without any gap.

--- a/navstyle2.css
+++ b/navstyle2.css
@@ -1,6 +1,6 @@
 body{
 
-    margin-top: 20px;
+    margin-top: 35px;
 }
 
 /* Style for Navigation bar starts here */
@@ -9,9 +9,11 @@ body{
 .topnav {
   background-color: #333;
   overflow: hidden;
-  /* position: fixed;
+  position: fixed;
   top: 0;
-  width: 100%; */
+  left: 1;
+  right: 1;
+  width: 100%; 
 }
 
 /* Style the links inside the navigation bar */
